Added Cart functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+/* Item page */
 .form-inline{
     margin-right: auto;
 }
@@ -155,3 +156,5 @@
     border-bottom-color: #ffa218;
     min-width: 160px !important;
 }
+
+/* Cart */
